Overflow of the Overview changed to hidden (prevents flicker bug on hover in the ZoomOverview). OverviewZoom :active states removed (in favor of the ActionRow hover).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.OverviewControl.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.OverviewControl.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.6 $
+ * @version     $Revision: 1.7 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -28,7 +28,7 @@
  * @see         https://bugzilla.mozilla.org/show_bug.cgi?id=492052
  */
 .OverviewControl {
-    overflow: auto;
+    overflow: hidden;
 }
 
 .OverviewBox > .Fixed {
@@ -101,10 +101,6 @@
     text-indent: -9999px;
     display: block;
 }
-    
-.OverviewZoom .Small:active span {
-    background-position: 0 -18px;
-}
 
 .OverviewZoom .Active .Small span {
     background-position: 0 -36px;
@@ -114,20 +110,12 @@
     background-position: -18px 0;
 }
     
-.OverviewZoom .Medium:active span {
-    background-position: -18px -18px;
-}
-    
 .OverviewZoom .Active .Medium span {
     background-position: -18px -36px;
 }
     
 .OverviewZoom .Preview span {
     background-position: -36px 0;
-}
-
-.OverviewZoom .Preview:active span {
-    background-position: -36px -18px;
 }
 
 .OverviewZoom .Active .Preview span {
